# utils

./: CMakeLists.txt  README.md
include/: string.hpp  string.tpp
include/utils/: allocators.hpp  assert.hpp  colors.hpp  concepts.hpp  constexpr.hpp  datetime.hpp  enum.hpp  events.hpp  exception.hpp  exceptions.hpp  filesystem.hpp  format.hpp  hash.hpp  logging.hpp  memory.hpp  platform.hpp  result.hpp  string.hpp  styles.hpp  tuple.hpp
include/utils/datetime/: date.hpp  duration.hpp  time.hpp  timestamp.hpp
include/utils/detail/: allocators.tpp  assert.tpp  datetime.tpp  events.tpp  exception.tpp  exceptions.tpp  format.tpp  hash.tpp  logging.tpp  memory.tpp  result.tpp  string.tpp  tuple.tpp
include/utils/detail/format/: format.tpp
include/utils/detail/string/: conversions.tpp  format.tpp  formatting.tpp  specifier.tpp
include/utils/format/: format.hpp  formatters.hpp
include/utils/internal/: assert.tpp  logging.tpp  result.tpp  string.tpp  tuple.tpp
include/utils/logging/: adapter.hpp  level.hpp  log.hpp  logging.hpp
include/utils/string/: conversions.hpp  format.hpp  formatting.hpp  specifiers.hpp
lib/: CMakeLists.txt
src/: adapter.cpp  allocators.cpp  assert.cpp  colors.cpp  datetime.cpp  events.cpp  exceptions.cpp  filesystem.cpp  format.cpp  logging.cpp  main.cpp  memory.cpp  result.cpp  string.cpp
src/format/: format.cpp
src/string/: conversions.cpp  format.cpp  formatting.cpp  specifiers.cpp
